[package]
name = "chip-8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#sdl2 = { version = "0.35.2", rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d", features = ["bundled"] }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "27cd1fd67c811e06b9d997a77bb6089a1b65070d", features = ["bundled"] }
